Location Weather service modified with tests added